Project clean up

--- a/FactoryPatternTest/FactoryPatternTest.csproj
+++ b/FactoryPatternTest/FactoryPatternTest.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FacortyPattern\FactoryPattern.csproj" />
+    <ProjectReference Include="..\FactoryPattern\FactoryPattern.csproj" />
   </ItemGroup>
 
 </Project>
